--- a/src/webapp/resources/order_en.properties
+++ b/src/webapp/resources/order_en.properties
@@ -4,7 +4,7 @@ order.newOrder = New Order
 order.orderNum = Order #
 order.status = Status
 order.deadline = Deadline
-order.employer = Employer
+order.entity = Order Entity
 order.device = Device
 order.deviceType = Device Type
 order.brand = Brand
@@ -12,3 +12,25 @@ order.client = Client
 order.price = Price
 order.hot = Hot Orders
 order.all = All Orders
+order.repair = Repair order
+order.create = Create order
+order.customer = Customer
+order.info = Information
+order.repairInfo = Repair information
+order.payment = Payment
+order.paymentSize = Payment size
+order.paymentDate = Payment date
+order.date = Date
+order.add = Add Order
+
+# extra info
+
+order.extraInfo = Extra information
+order.notes = Notes
+order.calltime = Time of call
+order.prepayment = Prepayment
+order.isUrgent = Is urgent
+order.chooseManager = Chooose Manager
+order.manager = Manager
+order.chooseEmployee = Choose Employee
+order.employee = Employee
