--- a/src/webapp/resources/order_ru.properties
+++ b/src/webapp/resources/order_ru.properties
@@ -12,3 +12,7 @@ order.client = Клиент
 order.price = Цена
 order.hot = Срочные заказы
 order.all = Все заказы
+order.entity=Предмет заказа
+order.repair=Заказ на ремонт
+order.create=Заказ на создание
+order.customer=Заказчик
